@@ -1,3 +1,8 @@
+Tue Sep  4 18:38:23 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (format_display): If $BROWSER contains several elements
+	  separated by colons, try each in turn until one succeeds.
+
 Tue Sep  4 02:09:07 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (format_display): Actually change to the temporary
